--- a/app01/templates/edit_article.html
+++ b/app01/templates/edit_article.html
@@ -12,7 +12,6 @@
         <h1 class="text-center">Edit Article</h1>
         <form method="post">
             {% csrf_token %}
-            {% csrf_token %}
             <div class="form-group">
                 <label for="id_title">Title</label>
                 <input type="text" class="form-control" id="id_title" name="title" value="{{ form.title.value }}">
@@ -34,6 +33,7 @@
                 <label for="id_content">Content</label>
                 <textarea class="form-control" id="id_content" name="content" rows="10">{{ form.content.value }}</textarea>
             </div>
+
             <button type="submit" class="btn btn-primary btn-block">Save Changes</button>
         </form>
     </div>
@@ -42,7 +42,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
      {% block css %}
-    <script src="/static/css/article.css"></script>
+    <link rel="stylesheet" href="/static/css/article.css?version=1.0.1">
 {% endblock %}
 </body>
 </html>
