--- a/app01/templates/publish.html
+++ b/app01/templates/publish.html
@@ -50,7 +50,7 @@
 
                 <div class="dropdown-group">
                     <label for="id_category2">Category2</label>
-                    <select name="category" id="id_category2" class="select-control"  required onclick="updateCategory3()" onchange="updateCategory3()">
+                    <select name="category2" id="id_category2" class="select-control"  required onclick="updateCategory3()" onchange="updateCategory3()">
                         <option value="" disabled selected>Select Category2</option>
                         <!-- 此处选项将由 JavaScript 动态填充 -->
                     </select>
