--- a/app01/templates/edit_article.html
+++ b/app01/templates/edit_article.html
@@ -5,33 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Article</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="/static/js/edit_article.js?version=1.0.1"></script>
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Edit Article</h1>
-        <form method="post">
+        <form method="post" >
             {% csrf_token %}
             <div class="form-group">
                 <label for="id_title">Title</label>
-                <input type="text" class="form-control" id="id_title" name="title" value="{{ form.title.value }}">
+                <input type="text" class="form-control" id="id_title" name="title" value="{{ article.title }}">
             </div>
             <div class="form-group">
                 <label for="id_author">Author</label>
                  <!-- 使用 Django 的表单字段渲染，并通过 readonly 属性设置为只读 -->
-                <input type="text" class="form-control" id="id_author" name="author" value="{{ form.author.value }}" readonly>
+                <input type="text" class="form-control" id="id_author" name="author" value="{{ article.author }}" readonly>
             </div>
             <div class="form-group">
                 <label for="id_summary">Summary</label>
-                <textarea class="form-control" id="id_summary" name="summary" rows="3">{{ form.summary.value }}</textarea>
+                <textarea class="form-control" id="id_summary" name="summary" rows="3">{{ article.summary }}</textarea>
             </div>
             <div class="form-group">
                 <label for="id_keywords">Keywords</label>
-                <input type="text" class="form-control" id="id_keywords" name="keywords"  value="{{ form.keywords.value }}">
+                <input type="text" class="form-control" id="id_keywords" name="keywords"  value="{{ article.keywords }}" >
             </div>
             <div class="form-group">
                 <label for="id_content">Content</label>
-                <textarea class="form-control" id="id_content" name="content" rows="10">{{ form.content.value }}</textarea>
+                <textarea class="form-control" id="id_content" name="content" rows="10">{{ article.content }}</textarea>
+            </div>
+            <div class="form-group">
+                <label for="id_content">Category</label>
+                <input type="text" class="form-control" id="id_category" name="category"  value="{{ article.category}}" readonly>
+                <button type="button" onclick="modifyCategory()">Modify</button>
+            </div>
+            <div class="dropdown-container" id ="dropdown-container" style="display: none">
+                <div class="dropdown-group">
+                    <label for="id_category1">Category1</label>
+                    <select name="category1" id="id_category1" class="select-control"  onchange="updateCategory2();updateCategory3()">
+                        <option value="" disabled selected>Select Category1</option>
+                        {% for category in categories %}
+                            {% if category.level == 1 %}
+                                <option value="{{ category.id }}">{{ category.name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <button type="button" onclick="addCategory(1)">Add</button>
+                </div>
+
+                <div class="dropdown-group">
+                    <label for="id_category2">Category2</label>
+                    <select name="category2" id="id_category2" class="select-control"   onclick="updateCategory3()" onchange="updateCategory3()">
+                        <option value="" disabled selected>Select Category2</option>
+                        <!-- 此处选项将由 JavaScript 动态填充 -->
+                    </select>
+                    <button type="button" onclick="addCategory(2)">Add</button>
+                </div>
+                <div class="dropdown-group">
+                    <label for="id_category3">Category2</label>
+                    <select name="category3" id="id_category3" class="select-control">
+                        <option value="" disabled selected>Select Category3</option>
+                        <!-- 此处选项将由 JavaScript 动态填充 -->
+                    </select>
+                    <button type="button" onclick="addCategory(3)">Add</button>
+                </div>
             </div>
 
             <button type="submit" class="btn btn-primary btn-block">Save Changes</button>
