--- a/app01/templates/edit_article.html
+++ b/app01/templates/edit_article.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="id_title">Title</label>
-                <input type="text" class="form-control" id="id_title" name="title" value="{{ article.title }}">
+                <input type="text" class="form-control" id="id_title" name="title" value="{{ article.title }}" required>
             </div>
             <div class="form-group">
                 <label for="id_author">Author</label>
@@ -23,15 +23,15 @@
             </div>
             <div class="form-group">
                 <label for="id_summary">Summary</label>
-                <textarea class="form-control" id="id_summary" name="summary" rows="3">{{ article.summary }}</textarea>
+                <textarea class="form-control" id="id_summary" name="summary" rows="3" required>{{ article.summary }}</textarea>
             </div>
             <div class="form-group">
                 <label for="id_keywords">Keywords</label>
-                <input type="text" class="form-control" id="id_keywords" name="keywords"  value="{{ article.keywords }}" >
+                <input type="text" class="form-control" id="id_keywords" name="keywords"  value="{{ article.keywords }}"  required>
             </div>
             <div class="form-group">
                 <label for="id_content">Content</label>
-                <textarea class="form-control" id="id_content" name="content" rows="10">{{ article.content }}</textarea>
+                <textarea class="form-control" id="id_content" name="content" rows="10" required>{{ article.content }}</textarea>
             </div>
             <div class="form-group">
                 <label for="id_content">Category</label>
