--- a/app01/templates/publish.html
+++ b/app01/templates/publish.html
@@ -15,7 +15,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="id_title">Title</label>
-                <input type="text" class="form-control" id="id_title" name="title">
+                <input type="text" class="form-control" id="id_title" name="title" required>
             </div>
             <div class="form-group">
                 <label for="id_author">Author</label>
@@ -24,15 +24,15 @@
             </div>
             <div class="form-group">
                 <label for="id_summary">Summary</label>
-                <textarea class="form-control" id="id_summary" name="summary" rows="3"></textarea>
+                <textarea class="form-control" id="id_summary" name="summary" rows="3" required></textarea>
             </div>
             <div class="form-group">
                 <label for="id_keywords">Keywords</label>
-                <input type="text" class="form-control" id="id_keywords" name="keywords">
+                <input type="text" class="form-control" id="id_keywords" name="keywords" required>
             </div>
             <div class="form-group">
                 <label for="id_content">Content</label>
-                <textarea class="form-control" id="id_content" name="content" rows="10"></textarea>
+                <textarea class="form-control" id="id_content" name="content" rows="10" required></textarea>
             </div>
             <div class="dropdown-container">
                 <div class="dropdown-group">
